<resources>
    <string name="app_name">Maryland2</string>
    <string name="enter_a_bus_to_find_a_matching_route">Enter a bus to find a matching route</string>
    <string name="maryland">Maryland</string>
    <string name="stroke">|</string>
    <string name="isolo">Isolo</string>
    <string name="no_matching_routes">NO MATCHING ROUTES</string>
    <string name="there_are_no_buses_which_routes_go">There are no buses which routes go</string>
    <string name="from_maryland_to_isolo">from Maryland to Isolo</string>
    <string name="route_details">Route details</string>
</resources>
